[package]
name = "jiggler"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Crisanti <rcrisanti@me.com>"]
description = "A simple CLI tool to occasionally jiggle your mouse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.27", features = ["derive"] }
mouce = "0.2.41"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
