[package]
name = "jiggler"
version = "0.1.0"
edition = "2021"
authors = ["Ryan Crisanti <rcrisanti@me.com>"]
description = "A simple CLI tool to occasionally jiggle your mouse"
readme = "README.md"
repository = "https://github.com/rcrisanti/jiggler/"
homepage = "https://github.com/rcrisanti/jiggler/"
license-file = "LICENSE"

[[bin]]
name = "jiggler"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
enigo = "0.2"
env_logger = "0.11.3"
log = "0.4.21"
thiserror = "1.0.37"
